# targetd-client

./: .gitlab-ci.yml  README.md  setup.cfg
stubs/: humanize.pyi
targetd_client/: __init__.py  cli.py  client.py  exceptions.py
tests/: test_client.py
