[metadata]
name = targetd_client
version = 0.3.0
author = Johan Fleury
author-email = jfleury@arcaik.net
home-page = https://gitlab.com/Arcaik/targetd_client
description = A client library for targetd
long-description = file: README.md
long_description_content_type = text/markdown
license = OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
license_file = LICENSE
platform = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System
    Topic :: System :: Filesystems
    Typing :: Typed

[options]
packages = targetd_client
include_package_data = true
zip_safe = false
python_requires = >= 3.6
setup_requires =
    setuptools>=38.3.0
tests_requires =
    flake8
    pydocstyle
install_requires =
    requests

[options.extras_require]
cli =
    click
    tabulate
    humanize

[options.entry_points]
console_scripts =
    targetdctl = targetd_client.cli:main [cli]

[aliases]
test = pytest

[check]
metadata = true
strict = true

[bdist_wheel]
universal = true

[tool:pytest]
addopts = --cov=targetd_client --cov-report=term-missing

[pydocstyle]
match-dir = ^(?!tests|resources|docs|\.).*$
match = ^(?!test_|setup|\.).*\.py$
ignore = D101, D200, D203, D212

[flake8]
max-line-length = 100
doctests = True
exclude = .git, .eggs, __pycache__, docs/, build/, dist/
